[package]
name = "stm3h743"
version = "0.1.0"
authors = ["baldwinrobertson"]
categories = ["embedded", "no-std"]
repository = "https://github.com/baldwin1974/stm32h743"
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m = "0.4.3"
bare-metal = "0.1.2"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
version = "0.4.0"

[dependencies.cortex-m-semihosting]
version = "0.2.0"

[dependencies.panic-abort]
version = "0.1.1"

[dependencies.panic-semihosting]
version = "0.1.0"

